--- a/2019-10-23-javascript-oop/index.html
+++ b/2019-10-23-javascript-oop/index.html
@@ -49,8 +49,8 @@ OOP = Object Oriented Programming (物件導向程式設計)
     <meta property="og:url" content="http://netjagaimo.github.io/2019-10-23-javascript-oop/" />
 
     
-    <meta property="og:image" content="/img/author.jpg">
-    <meta property="twitter:image" content="/img/author.jpg">
+    <meta property="og:image" content="/img/logo.png">
+    <meta property="twitter:image" content="/img/logo.png">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-png" /><link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1607597_jhmihcvh0tm.css" />
@@ -1194,7 +1194,7 @@ JavaScript沒有class的設計，你寫的那個class是ES6提供的語法糖
 
     <div class="lg:w-full mx-auto items-center justify-between">
     <div class="bg-white shadow rounded overflow-hidden">
-        <div class="bg-cover bg-auto mx-auto w-32 h-32 mt-5 rounded-full" style="background-image: url('/img/author.jpg')"> </div>
+        <div class="bg-cover bg-auto mx-auto w-32 h-32 mt-5 rounded-full" style="background-image: url('/img/logo.png'); background-size: contain; background-repeat: no-repeat; background-position: center;"> </div>
         
         <div class="p-4">
             <p class="text-2xl text-center text-gray-900 pb-2">NetJagaimo</p>
